PSA-006 Config Swagger and access header
